# TEMCOIN

./: Contributors  LICENSE  README.md  TEMCOIN_install.sh  contributors  pyproject.toml  requirements.txt  user_guide.md
DNA_origamic_classification_MLAI/: README
DNA_origamic_classification_MLAI/AlexNet_DNA_origami_classification/run1/: AlexNet_predict_TEM.py
DNA_origamic_classification_MLAI/DT/: DT_10.py
TEM/: README
doc/: run_TEMCOIN
predictTEM/: README
predictVMD/: README
results_plots/: README
results_plots/run1/: Alex_predictions_vmd.csv  Goog_predictions_v4.csv  Goog_predictions_v5.csv  ResNet101_predictions_v1.csv  ResNet101_predictions_v2.csv  ResNet101_predictions_vmd.csv  ResNet152_predictions_v2.csv  ResNet18_predictions_v1.csv  ResNet18_predictions_v2.csv  ResNet18_predictions_vmd.csv  ResNet34_predictions_v1.csv  ResNet34_predictions_v2.csv  ResNet50_predictions_v4.csv  ResNet50_predictions_vmd.csv  VGG16_predictions_v3.csv  VGG19_predictions_vmd.csv  alexnet_trained_predictions_vmd.csv  alexnet_trained_predictions_vmd_v4.csv  googlenet_trained_predictions_vmd.csv  job.alexnetDNAQDclassify.15311323.gpu05  job.googleNetDNAQDclassify.11764567.gpu10  job.googleNetDNAQDclassify.15312009.gpu06  job.resNetDNAQDclassify.15313597.gpu04  resnet101_trained_predictions_vmd.csv  resnet152_trained_predictions_vmd.csv  resnet152_trained_predictions_vmd_v2.csv  resnet18_trained_predictions_vmd_v2.csv  resnet34_trained_predictions_vmd.csv  resnet50_trained_predictions_vmd_v2.csv  training_results_VGG16_v4.csv  training_results_googlenet_v5.csv  training_results_res101_v2.csv  training_results_res152_v2.csv  training_results_res18_v2.csv  training_results_res34_v2.csv  training_results_res50_v5.csv  training_results_v4.csv  training_results_vgg19_v4.csv  vgg19_trained_predictions_vmd_v1.csv
simulation/: README
src/predictVMD/: README
src/results_plots/: figure_plot.ipynb
src/simulation/: README
(+64 files in other folders)
