[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "TEMCOIN"
version = "0.1.0"
authors = [
    { name = "X. Wei, Q. Mo and R. Hernandez", email = "r.hernandez@jhu.edu" }
]
description = "TEMCOIN provides benchmarking CNN models to predict ligation numbers in DNA origami nanostructures."
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "filelock==3.13.1",
    "fonttools==4.49.0",
    "fsspec==2024.2.0",
    "importlib-resources==6.1.2",
    "jinja2==3.1.3",
    "joblib==1.3.2",
    "kiwisolver==1.4.5",
    "markupsafe==2.1.5",
    "matplotlib==3.7.5",
    "mpmath==1.3.0",
    "networkx==3.1",
    "numpy==1.24.4",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.19.3",
    "nvidia-nvjitlink-cu12==12.3.101",
    "nvidia-nvtx-cu12==12.1.105",
    "packaging==23.2",
    "pillow==10.2.0",
    "pyparsing==3.1.1",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.3.2",
    "scipy==1.10.1",
    "six==1.16.0",
    "sympy==1.12",
    "threadpoolctl==3.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "triton==2.2.0",
    "typing-extensions==4.10.0",
    "zipp==3.17.0"
]
dynamic=["version"]

[project.urls]
Homepage = "https://github.com/rxhernandez/TEMCOIN"
Documentation = "https://github.com/rxhernandez/TEMCOIN"
Repository = "https://github.com/rxhernandez/TEMCOIN.git"

[tool.setuptools.dynamic]
version={attr="test_package.__version__"}